fixed alignment

--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -31,6 +31,7 @@
 
 .register {
   display: flex;
+  justify-content: center;
   background-color: $light-pink;
   align-items: center;
   padding: 4rem 4rem;
